--- a/pylaform/templates/landing.html
+++ b/pylaform/templates/landing.html
@@ -24,12 +24,12 @@
                 </li>
                 <li>
                     <p class="text-center">
-                        <a href="#" class="btn btn-lg btn-secondary">Short</a>
+                        <a href="/generate/one-page" class="btn btn-lg btn-secondary">Short</a>
                     </p>
                 </li>
                 <li>
                     <p class="text-center">
-                        <a href="#" class="btn btn-lg btn-secondary">Hybrid</a>
+                        <a href="/generate/hybrid" class="btn btn-lg btn-secondary">Hybrid</a>
                     </p>
                 </li>
             </ul>
