--- a/pylaform/templates/glossary.html
+++ b/pylaform/templates/glossary.html
@@ -1,10 +1,25 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+{% extends "base.html" %}
+{% block content %}
+    <div class="d-flex align-items-bottom justify-content-center">
+        <form method="post">
+        <ul>
+            {% for item in payload %}
+                <li>
+                    <label for="{{ item['id'] }}_{{ item['attr'] }}">{{ item['attr'] }}</label>
+                    <br>
+                    <textarea name="{{item['id']}}_{{ item['attr'] }}"{{ item['value'] }}
+                              id="{{ item['id'] }}"
+                              rows="2"
+                              cols="100"
+                    >{{ item['value'] if item['value'] is defined else '' }}</textarea>
+                    <br>
+                    <label for="{{ item['id'] }}_{{ item['attr'] }}_enabled">Displayed</label>
+                    <input type="checkbox" name="{{item['id']}}_{{ item['attr'] }}_enabled"
+                            {{ "checked" if item['state'] }}>
+                </li>
+            {% endfor %}
+        </ul>
+        <button type="submit">Submit</button>
+        </form>
+    </div>
+{% endblock %}
