--- a/pylaform/templates/information.html
+++ b/pylaform/templates/information.html
@@ -5,21 +5,21 @@
         <ul>
             {% for item in payload %}
                 <li class="">
-                    <label for="{{ item['attr'] }}">{{ item['attr'] }}</label>
+                    <label for="{{ item['id'] }}_{{ item['attr'] }}">{{ item['attr'] }}</label>
                     <br>
                     {% if item['attr'] == 'description' %}
-                        <textarea name="{{item['id']}}_{{item['attr']}}"
-                                id="{{ item['id'] }}"
+                        <textarea name="{{ item['id'] }}_{{ item['attr'] }}"
+                                id="{{ item['id'] }}_{{ item['attr'] }}"
                                 rows="10"
                                 cols="60"
                         >{{ item['value'] if item['value'] is defined else '' }}</textarea>
                     {% else %}
-                        <input type="text" name="{{item['id']}}_{{item['attr']}}" id="{{ item['id'] }}"
+                        <input type="text" name="{{ item['id'] }}_{{ item['attr'] }}" id="{{ item['id'] }}_{{ item['attr'] }}"
                                value="{{ item['value'] if item['value'] is defined else '' }}">
                     {% endif %}
                     <br>
-                    <label for="{{ item['attr'] }}_enabled">Displayed</label>
-                    <input type="checkbox" name="{{item['id']}}_{{item['attr']}}_enabled"
+                    <label for="{{ item['id'] }}_{{ item['attr'] }}_enabled">Displayed</label>
+                    <input type="checkbox" name="{{ item['id'] }}_{{ item['attr'] }}_enabled"
                             {{ "checked" if item['state'] }}>
                 </li>
             {% endfor %}
